--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,10 @@
     top: 30%;
     left: 80%;
 }
+.animation-area .lieu-de-traitement[data-type="particulier"]{
+    top: 20%;
+    left: 10%;
+}
 
 .finalites {
     display: flex;
